skiplang/compiler/invalid_tests/typechecking/untracked_pipe_lambda.sk
// it's an error to pipe into an untracked lambda from a tracked context
fun main(): void {
  print_raw("Fail\n" |> (untracked x -> x))
}
